RESOLVED FIXED128096
IDB: Cannot open new databases with the default version
https://bugs.webkit.org/show_bug.cgi?id=128096
Summary IDB: Cannot open new databases with the default version
Brady Eidson
Reported 2014-02-02 21:51:05 PST
IDB: Cannot open new databases with the default version
Attachments
Patch v1 (6.28 KB, patch)
2014-02-02 21:53 PST, Brady Eidson
no flags
Patch v2 - Fix style by making code read the true intention (6.31 KB, patch)
2014-02-02 22:08 PST, Brady Eidson
thorton: review+
Brady Eidson
Comment 1 2014-02-02 21:53:24 PST
Created attachment 222959 [details] Patch v1
WebKit Commit Bot
Comment 2 2014-02-02 21:54:37 PST
Attachment 222959 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/IDBDatabaseBackend.cpp:475: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Radar WebKit Bug Importer
Comment 3 2014-02-02 22:07:22 PST
Brady Eidson
Comment 4 2014-02-02 22:08:01 PST
Created attachment 222960 [details] Patch v2 - Fix style by making code read the true intention
Jon Lee
Comment 5 2014-02-02 22:13:53 PST
Comment on attachment 222959 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=222959&action=review provisional r=me with the changes above. > Source/WebCore/Modules/indexeddb/IDBDatabaseBackend.cpp:475 > + if (isNewDatabase && version == 0) { DefaultIntVersion? > Source/WebKit2/ChangeLog:10 > + have the magic âno version setâ version. Pretty quotes are not so pretty here.
Brady Eidson
Comment 6 2014-02-02 22:15:22 PST
(In reply to comment #5) > (From update of attachment 222959 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=222959&action=review > > provisional r=me with the changes above. > > > Source/WebCore/Modules/indexeddb/IDBDatabaseBackend.cpp:475 > > + if (isNewDatabase && version == 0) { > > DefaultIntVersion? Yep, that's the intent. Fixed. > > > Source/WebKit2/ChangeLog:10 > > + have the magic âno version setâ version. > > Pretty quotes are not so pretty here. Fixed locally. Thanks!
Brady Eidson
Comment 7 2014-02-02 22:15:52 PST
Note You need to log in before you can comment on or make changes to this bug.